Created self contained version

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birth Date Selector</title>
+    <title>CPR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Select Your Birth Date</h1>
+    <h1>Vælg fødselsdato</h1>
     <div class="selectors">
         <select id="monthSelect"></select>
         <select id="yearSelect"></select>
